@@ -16,7 +16,7 @@ import {hsluvToHex} from 'hsluv';
 
 import {Actions} from '../../common/actions';
 import {cropText, drawIncompleteSlice} from '../../common/canvas_utils';
-import {hslForSlice} from '../../common/colorizer';
+import {hslForSlice, hslForThreadIdleSlice} from '../../common/colorizer';
 import {TRACE_MARGIN_TIME_S} from '../../common/constants';
 import {TrackState} from '../../common/state';
 import {checkerboardExcept} from '../../frontend/checkerboard';
@@ -85,6 +85,7 @@ export class ChromeSliceTrack extends Track<Config, Data> {
       const isIncomplete = data.isIncomplete[i];
       const title = data.strings[titleId];
       const colorOverride = data.colors && data.strings[data.colors[i]];
+      const isThreadSlice = this.config.isThreadSlice;
       if (isIncomplete) {  // incomplete slice
         tEnd = visibleWindowTime.end;
       }
@@ -103,8 +104,9 @@ export class ChromeSliceTrack extends Track<Config, Data> {
       const highlighted = titleId === this.hoveredTitleId ||
           globals.frontendLocalState.highlightedSliceId === sliceId;
 
-      const [hue, saturation, lightness] =
-          hslForSlice(name, highlighted || isSelected);
+      const hasFocus = highlighted || isSelected;
+
+      const [hue, saturation, lightness] = hslForSlice(name, hasFocus);
 
       let color: string;
       if (colorOverride === undefined) {
@@ -113,6 +115,16 @@ export class ChromeSliceTrack extends Track<Config, Data> {
         color = colorOverride;
       }
       ctx.fillStyle = color;
+
+      if (isThreadSlice) {
+        const cpuTimeRatio = data.cpuTimeRatio![i];
+        const [GradientHue, GradientSaturation, GradientLightness] =
+            hslForThreadIdleSlice(hue, saturation, lightness, hasFocus);
+        const gradientColor =
+            hsluvToHex([GradientHue, GradientSaturation, GradientLightness]);
+        ctx.fillStyle = this.createGradientForThreadSlice(
+            tStart, tEnd, cpuTimeRatio, color, gradientColor, ctx);
+      }
 
       // We draw instant events as upward facing chevrons starting at A:
       //     A
@@ -269,6 +281,23 @@ export class ChromeSliceTrack extends Track<Config, Data> {
       visible:
           !(tEnd <= visibleWindowTime.start || tStart >= visibleWindowTime.end)
     };
+  }
+
+  createGradientForThreadSlice(
+      tStart: number, tEnd: number, cpuTimeRatio: number, color: string,
+      gradientColor: string, ctx: CanvasRenderingContext2D): CanvasGradient {
+    const timeScale = globals.frontendLocalState.timeScale;
+    const {start: windowStart, end: windowEnd} =
+        globals.frontendLocalState.visibleWindowTime;
+    const start = isFinite(timeScale.timeToPx(tStart)) ?
+        timeScale.timeToPx(tStart) :
+        windowStart;
+    const end = isFinite(timeScale.timeToPx(tEnd)) ? timeScale.timeToPx(tEnd) :
+                                                     windowEnd;
+    const gradient = ctx.createLinearGradient(start, 0, end, 0);
+    gradient.addColorStop(cpuTimeRatio, color);
+    gradient.addColorStop(cpuTimeRatio, gradientColor);
+    return gradient;
   }
 }
 
